--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     <div class="cover">
-        <image src="../../images/logo.jpg" class="logo"/>
+        <image src="static/images/logo.jpg" class="logo"/>
     </div>
     <div class="title">嗨~这是一个测试</div>
     <div class="desc">这里是测试的小程序版本1.0</div>images
