--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="static/css/index.css" type="text/css" />
+    <script type="text/javascript" src="static/js/index.js"></script>
+    <script type="text/javascript" src="static/api/index.json"></script>
+    <title>骰子入门教学</title>
 </head>
 <body>
 <div>
     <div class="cover">
-        <image src="static/images/logo.jpg" class="logo"/>
+        <image src="static/images/logo.jpg" class="logo"></image>
     </div>
     <div class="title">嗨~这是一个测试</div>
-    <div class="desc">这里是测试的小程序版本1.0</div>images
+    <div class="desc">这里是测试的小程序版本1.0</div>
+
 </div>
 </body>
 </html>
